tests/valid/03_and_not_precedence.brl
approved := income > 5000 and not blocked;
print approved;
