tests/invalid/01_missing_semicolon.brl
adult := age >= 18
print adult;
